# ComputerVisionPlayground

./: ImageDisplay.cpp  ImageDisplay.h  ImageProcessing.cpp  ImageProcessing.h  README.md
HarrisCorner/source/: CMakeLists.txt  CudaKernels.cu  CudaKernels.h  HarrisCorner.cpp  HarrisCorner.h  README.md  main.cu
ImageDisplay/: ImageDisplay.cpp  ImageProcessing.cpp  ImageProcessing.h
IntellIPP/: ImageProcessing.cpp  ImageProcessing.h  IntellIPPTest.sln  IntellIPPTest.vcxproj  Readme.gitkeep
